objects/testp2__c.object
<CustomObject>
    <fields>
        <fullName>Currency1__c</fullName>
        <label>Currency 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Currency2__c</fullName>
        <label>Currency 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Currency3__c</fullName>
        <label>Currency 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CustomerRegion__c</fullName>
        <label>Customer Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>North America</fullName>
                    <default>true</default>
                    <label>North America</label>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>APAC</fullName>
                </value>
                <value>
                    <fullName>India</fullName>
                </value>
                <value>
                    <fullName>LATAM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CustomerStatus__c</fullName>
        <label>Customer Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Prospect</fullName>
                    <default>true</default>
                    <label>Prospect</label>
                </value>
                <value>
                    <fullName>Onboarding</fullName>
                </value>
                <value>
                    <fullName>Live</fullName>
                </value>
                <value>
                    <fullName>At Risk</fullName>
                </value>
                <value>
                    <fullName>Renewal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CustomerTier__c</fullName>
        <label>Customer Tier</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                    <default>true</default>
                    <label>Standard</label>
                </value>
                <value>
                    <fullName>Growth</fullName>
                </value>
                <value>
                    <fullName>Enterprise</fullName>
                </value>
                <value>
                    <fullName>Strategic</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email1__c</fullName>
        <label>Email 1</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email2__c</fullName>
        <label>Email 2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email3__c</fullName>
        <label>Email 3</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Phone1__c</fullName>
        <label>Phone 1</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Phone2__c</fullName>
        <label>Phone 2</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Phone3__c</fullName>
        <label>Phone 3</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Text1__c</fullName>
        <label>Text 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Text2__c</fullName>
        <label>Text 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Text3__c</fullName>
        <label>Text 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>testp2</label>
    <nameField>
        <label>testp2 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>testp2 Records</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>